# revsim

./: .gitignore  README.md  pyproject.toml
revsim/: __init__.py  custom_types.py  reversible_circuit.py  reversible_gate.py
revsim/gates/: ccnot_gate.py  cnot_gate.py  custom_gate.py  not_gate.py
