[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "revsim"
version = "0.1.0"
description = "A classical simulator for reversible circuits."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pawel Wolny"}
]
keywords = ["reversible", "circuit", "quantum", "simulator", "logic"]
dependencies = [
    bitarray >= 3.4.0
]

[project.urls]
Homepage = "https://github.com/pawel-t-wolny/revsim"
Repository = "https://github.com/pawel-t-wolny/revsim"
Issues = "https://github.com/pawel-t-wolny/revsim/issues"